Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-45141

Duplicate QML types in the "All QML Types" index are not distinguished

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.5.0 Beta
    • 5.5.0 Alpha
    • Build tools: qdoc
    • None
    • dfe66c420c59c5d5f188414fd71e688d819fb0e2

    Description

      We have two State types in the All QML Types list. One is in QtQuick and the other is in QtQml, but they are both just listed as "State" with no way to tell which is which. They should look like this:

      State: QtQml
      State: QtQuick

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            gbk Martin Smith (Qt)
            gbk Martin Smith (Qt)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes